<resources>
    <string name="amity_recommended_for_you">Recommended for you</string>
    <string name="amity_community_followers">%1$s followers | %2$s mutual friends</string>
    <string name="amity_todays_trending">Today’s Trending</string>
    <string name="amity_number_of_followers">%1$s and %2$s are following</string>
    <string name="amity_posts">posts</string>
    <string name="amity_followers">followers</string>
    <string name="amity_mutual_friends">are members</string>
    <string name="amity_following">Following</string>
    <string name="amity_title_news_feed">Nyhetsflöde</string>
    <string name="amity_title_explore">Utforska</string>
    <string name="amity_community">Community</string>
    <string name="amity_create_community">Skapa community</string>
    <string name="amity_cc_hint">Name your community</string>
    <string name="amity_about">About</string>
    <string name="amity_enter_description">Enter description</string>
    <string name="amity_tv_public">Public</string>
    <string name="amity_admin_description">Choose to allow Only Admins to create posts in this community.</string>
    <string name="amity_public_description">Anyone can join, view, and search the posts in this community.</string>
    <string name="amity_tv_private">Private</string>
    <string name="amity_private_description">Only members invited by the moderators can join, view, and search the posts in this community.</string>
    <string name="amity_only_admin">Only admin can post</string>
    <string name="amity_add_members">Add members<font fgcolor='#FF0000'>*</font></string>
    <string name="amity_cancel">Cancel</string>
    <string name="amity_cancel_request">Cancel request</string>
    <string name="amity_select_members">Select members</string>
    <string name="amity_add">Add</string>
    <string name="amity_selected">Selected</string>
    <string name="amity_hello_blank_fragment">Hello blank fragment</string>
    <string name="amity_feed_post_time">%d mins</string>
    <string name="amity_post_compose_hint">What\'s going on…</string>
    <string name="amity_post">Post</string>
    <string name="amity_post_caps">POST</string>
    <string name="amity_new_post">New Post</string>
    <string name="amity_attachment_size_limit_exceed">One or more file exceed max file size limit 1GB</string>
    <string name="amity_attachment_count_limit_exceed">Can not select more than 10 files</string>
    <string name="amity_discard">Kasta</string>
    <string name="amity_discard_post_title">Radera inlägg?</string>
    <string name="amity_discard_post_message">Vill du slänga ändringarna du gjort?</string>
    <string name="amity_share">Share</string>
    <string name="amity_comment">Comment</string>
    <string name="amity_like">Like</string>
    <string name="amity_liked">Liked</string>
    <string name="amity_image_count">+%d</string>
    <string name="amity_view_all_files">View all files</string>
    <string name="amity_delete">Radera</string>
    <string name="amity_leave">Leave</string>
    <string name="amity_close">Close</string>
    <string name="amity_successfully_created_community">Successfully created community</string>
    <string name="amity_delete_post_title">Ta bort det här inlägge</string>
    <string name="amity_delete_post_warning_message">Detta inlägg kommer att raderas permanent. Du kommer inte längre att se och hitta det här inlägge</string>
    <string name="amity_my_timeline">My Timeline</string>
    <string name="amity_post_to">Post to</string>
    <string name="amity_post_as_community">Post as Community</string>
    <string name="amity_moderator">Moderator</string>
    <string name="amity_edited">Edited</string>
    <string name="amity_post_as_community_message">This option allows you to post on behalf of the community account.</string>
    <string name="amity_create_post_max_image_selected_warning">Reached max selection limit</string>
    <string name="amity_empty_feed">Ditt flöde är tomt</string>
    <string name="amity_empty_category_community">It\'s empty here…</string>
    <string name="amity_no_comments_found">No community found in this\ncategory</string>
    <string name="amity_find_community">Sök efter personer att följa för att få nyhetsflöde och utforska communityn</string>
    <string name="amity_explore_community">Utforksa community</string>
    <string name="amity_post_comment_hint">Say something nice</string>
    <string name="amity_reply">Reply</string>
    <string name="amity_view_replies">View replies</string>
    <string name="amity_view_more_replies">View more replies</string>
    <string name="amity_view_all_replies">View all %d replies</string>
    <string name="amity_view_all_comments">View all comments…</string>
    <string name="amity_edit_reply">Edit Reply</string>
    <string name="amity_delete_reply">Delete Reply</string>
    <string name="amity_delete_reply_title">Delete reply</string>
    <string name="amity_delete_reply_warning_message">"This reply will be permanently removed."</string>
    <string name="amity_add_reply_error_message">Unable to add reply</string>
    <string name="amity_discard_reply_message">Do you want to discard your reply?</string>
    <string name="amity_update_reply_error_message">Unable to update reply</string>
    <string name="amity_reply_to">Reply to</string>
    <string name="amity_reply_deleted_message">This reply has been deleted</string>
    <string name="amity_discard_reply_title">Discard Reply?</string>
    <string name="amity_community_name">Community name<font fgcolor='#FF0000'>*</font></string>
    <string name="amity_category">Category</string>
    <string name="amity_category_required_field">Category<font fgcolor='#FF0000'>*</font></string>
    <string name="amity_please_select_category">Please Select Category</string>
    <string name="amity_categories">Categories</string>
    <string name="amity_error_name">This name has already been taken.</string>
    <string name="amity_cc_leave">Innan du går vidare, stämmer allt?</string>
    <string name="amity_cc_dialog_msg">Your progress won\'t be saved and your group won\'t be created.</string>
    <string name="amity_done">Klar</string>
    <string name="amity_delete_comment">Radera kommentar</string>
    <string name="amity_edit_comment">Redigera kommentar</string>
    <string name="amity_delete_comment_title">Radera kommentar?</string>
    <string name="amity_delete_comment_warning_message">Är du säker? Denna åtgärd kan inte ångras.</string>
    <string name="amity_discard_comment_title">Radera kommentar?</string>
    <string name="amity_discard_comment_message">Är du säker? Denna åtgärd kan inte ångras.</string>
    <string name="amity_members">members</string>
    <string name="amity_members_capital">Members</string>
    <string name="amity_edit_profile">Edit Profile</string>
    <string name="amity_notification">Notification</string>
    <string name="amity_notifications">Notifications</string>
    <string name="amity_notification_on">On</string>
    <string name="amity_notification_off">Off</string>
    <string name="amity_post_review">Post Review</string>
    <string name="amity_message">Message</string>
    <string name="amity_join">Join</string>
    <string name="amity_join_community_message">Join community to interact with all posts</string>
    <string name="amity_timeline">Timeline</string>
    <string name="amity_no_post">No posts yet</string>
    <string name="amity_home">home</string>
    <string name="amity_chatt">chatt</string>
    <string name="amity_explore">Utforska</string>
    <string name="amity_comment_deleted_message">This comment has been removed.</string>
    <string name="amity_select_category">Välj grupp</string>
    <string name="amity_start_post">Start your first post</string>
    <string name="amity_no_user_found">No user found</string>
    <string name="amity_my_community">My Community</string>
    <string name="amity_see_all">See all</string>
    <string name="amity_upload_incomplete">Upload incomplete</string>
    <string name="amity_image_upload_failed_message">Some images could not be uploaded. Please remove and try again</string>
    <string name="amity_attachment_upload_failed_message">Some files could not be uploaded. Please remove and try again</string>
    <string name="amity_no_community">No community found</string>
    <string name="amity_bullet">•</string>
    <string name="amity_members_count">%1$s members</string>
    <string name="amity_preparing">Preparing...</string>
    <string name="amity_community_setting">Community Settings</string>
    <string name="amity_basic_info">Basic Info</string>
    <string name="amity_community_permissions">Community Permissions</string>
    <string name="amity_close_community">Stäng community?</string>
    <string name="amity_close_community_description">Closing this community will remove the community page and all its content and comments.</string>
    <string name="amity_leave_community">Leave community</string>
    <string name="amity_moderator_leave_community_msg">Om du stänger denna community kommer communityn och allt dess innehåll att tas bort.</string>
    <string name="amity_moderator_leave_community_error_msg">Du är den enda moderatorn i den här gruppen. För att lämna communityn, nominera andra medlemmar till moderatorrollen.</string>
    <string name="amity_last_moderator_leave_community_msg">Eftersom du är den sista moderatorn och medlemmen stänger du också denna grupp om du lämnar dig. Alla inlägg som delas i gruppen kommer att raderas. Detta kan inte göras ogjort</string>
    <string name="amity_close_community_msg">Alla medlemmar kommer att tas bort från gruppen. Alla inlägg, meddelanden, reaktioner och media som delas i gruppen kommer att raderas. Detta kan inte göras ogjort.</string>
    <string name="amity_leave_community_msg">You won\’t no longer be able to post and interact in this community after leaving.</string>
    <string name="amity_leave_community_error_title">Det går inte att lämna communityn</string>
    <string name="amity_close_community_error_title">Det går inte att stänga communityn</string>
    <string name="amity_mention_error_title">Unable to mention user</string>
    <string name="amity_mention_error_msg">You have reached maximum 30 mentioned users in a post.</string>
    <string name="amity_post_characters_limit_error_title">Unable to type text into post</string>
    <string name="amity_comment_characters_limit_error_title">Unable to type text into comment</string>
    <string name="amity_characters_limit_error_msg">You have reached 50,000 characters limit.</string>
    <string name="amity_characters_limit_dynamic_error_msg">You have reached %,d characters limit.</string>
    <string name="amity_unable_turn_off_post_review_title">Unable to turn off post review</string>
    <string name="amity_unable_turn_on_post_review_title">Unable to turn on post review</string>
    <string name="amity_something_went_wrong_pls_try">Something went wrong. Please try again later.</string>
    <string name="amity_turn_off_post_review">Turn off post review?</string>
    <string name="amity_turn_off_post_review_msg">All pending posts will be posted in community feed. Continue?</string>
    <string name="amity_turn_off">Turn Off</string>
    <string name="amity_moderators">Moderatorer</string>
    <string name="amity_choose_existing">Choose Existing</string>
    <string name="amity_take_photo">Take Photo</string>
    <string name="amity_upload_failed_profile_picture">Failed to update profile picture</string>
    <string name="amity_video_stream_live">Live</string>
    <string name="amity_video_stream_ended_title">Den här livestreamen har avslutats</string>
    <string name="amity_video_stream_ended_description">Playback will be available for you to watch shortly.</string>
    <string name="amity_video_stream_unavailable_description">This stream is currently unavailable</string>
</resources>