<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.amity.socialcloud.uikit.common.common.views.AmityColorShade" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/amity_padding_s"
            android:src="@drawable/amity_ic_xmlid" />

        <TextView
            android:id="@+id/tvEmptyGlobalFeed"
            style="@style/AmityTextStyleHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/amity_padding_s"
            android:text="@string/amity_empty_feed"
            android:textColor="#351F65"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvFindCommunity"
            style="@style/AmityTextStyleBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/amity_find_community"
            android:textColor="#351F65"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnExplore"
            style="@style/AmityMaterialButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/amity_padding_s"
            android:layout_marginEnd="20dp"
            android:paddingHorizontal="@dimen/amity_padding_m3"
            android:text="@string/amity_explore_community"
            android:textSize="18.sp"
            app:iconGravity="textStart" />

        <TextView
            android:id="@+id/tvCreateCommunity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/amity_padding_m1"
            android:fontFamily="@font/recoleta_medium"
            android:text="@string/amity_create_community"
            android:textColor="#351F65"
            android:textSize="18.sp"
            android:textStyle="bold"
            android:visibility="visible" />

    </LinearLayout>
</layout>