<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/amityColorBlack"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/livestream_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <com.amity.socialcloud.sdk.video.presentation.AmityVideoPlayer
            android:id="@+id/video_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/live_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/amity_rounded_corner_red"
            android:fontFamily="@font/recoleta_regular"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp"
            android:text="@string/amity_video_stream_live"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/amityColorWhite"
            android:textSize="16sp"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/recoleta_regular"
            android:src="@drawable/amity_ic_cross"
            android:gravity="center"
            app:tint="@color/amityColorWhite"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:paddingRight="18dp"
            android:paddingBottom="4dp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/btn_audio_toggle"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:src="@drawable/amity_ic_story_audio_unmute"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ended_video_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/amityColorBlack"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingStart="80dp"
            android:paddingEnd="80dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/recoleta_regular"
                android:gravity="center"
                android:text="@string/amity_video_stream_ended_title"
                android:textColor="@color/amityColorWhite"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/recoleta_regular"
                android:gravity="center"
                android:text="@string/amity_video_stream_ended_description"
                android:textColor="@color/amityColorWhite"
                android:textSize="14sp" />


        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/unavailable_video_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/amityColorBlack"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingStart="80dp"
            android:paddingEnd="80dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:src="@drawable/amity_ic_error"
                android:tint="@color/amityColorWhite"
                app:tint="@color/amityColorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:fontFamily="recoleta_regular"
                android:gravity="center"
                android:text="@string/amity_video_stream_unavailable_description"
                android:textColor="@color/amityColorWhite"
                android:textSize="14sp" />

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>